--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/rest": "^1.0.0",
+    "blend-promise-utils": "^1.29.0",
     "discord-api-types": "^0.36.2",
     "discord.js": "^14.0.2",
     "lodash-es": "^4.17.21",
-    "lowdb": "^3.0.0"
+    "lowdb": "^3.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
